--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1>🚀 사토시의지갑 (Satoshi Wallet)</h1>
+  <h1>사토시의지갑 (Satoshi Wallet)</h1>
   <p>업비트 & 빗썸 실시간 시세 연동<br/>AI 매수·매도 타점 자동 표시 시스템</p>
   <p>현재 서버 연결 테스트 중...</p>
 </body>
